Создан файл HTML

--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cryptocurrency Exchange Rate</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1>Cryptocurrency Exchange Rate</h1>
+        <form id="exchangeForm">
+            <label for="crypto">Choose a cryptocurrency:</label>
+            <select id="crypto">
+                <option value="bitcoin">Bitcoin</option>
+                <option value="ethereum">Ethereum</option>
+                <option value="ripple">Ripple</option>
+                <option value="cardano">Cardano</option>
+            </select>
 
+            <label for="currency">Choose a currency:</label>
+            <select id="currency">
+                <option value="usd">USD</option>
+                <option value="eur">EUR</option>
+                <option value="rub">RUB</option>
+            </select>
+
+            <button type="button" id="getRate">Get Rate</button>
+        </form>
+
+        <div id="result" class="result">
+            <h2>Exchange Rate</h2>
+            <p id="exchangeRate">Please select cryptocurrency and currency to see the rate.</p>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
